--- a/src/python/pipeline/components/train_model/conda.yml
+++ b/src/python/pipeline/components/train_model/conda.yml
@@ -9,6 +9,12 @@ dependencies:
   - python=3.12.6
   - pip:
       - torch==2.2.2
+      - pillow==11.1.0
       - torchvision==0.17.2
       - mlflow==2.21.0
+      - pandas==2.2.3
+      - ultralytics==8.3.91
+      - ultralytics-thop==2.0.14
+      - scikit-learn==1.6.1
+      - torchmetrics==1.6.1
 
