--- a/src/python/pipeline/components/test_model/conda.yml
+++ b/src/python/pipeline/components/test_model/conda.yml
@@ -8,11 +8,15 @@ dependencies:
   - pip=25.0.1
   - python=3.12.6
   - pip:
+      - numpy==1.26.4
       - torch==2.2.2
       - pillow==11.1.0
       - torchvision==0.17.2
       - mlflow==2.21.0
+      - azureml-mlflow==1.59.0.post1
       - pandas==2.2.3
-      - ultralytics==8.3.91
-      - ultralytics-thop==2.0.14
+      - scikit-learn==1.6.1
+      - torchmetrics==1.6.1
+
+ 
 
